--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {
     padding-left: 7vw; padding-right: 7vw;
 }
 p {
-    font-size: 16px;
+    font-size: 20px;
     padding-left: 1vw; padding-right: 1vw;
 }
 h1 {
@@ -86,6 +86,7 @@ select{
     height: auto; 
     background-color: white;
     transition: 0.3s;
+
     
   }
 .child:first-child {
@@ -95,6 +96,8 @@ select{
 }
 .child:not(:first-child) {
     flex: 1;
+    max-width: 30vw;
+    text-align: center;
 }
 .nav {
     margin:0;
